--- a/XiaoDaiRobot/app/src/main/res/values/strings.xml
+++ b/XiaoDaiRobot/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">百度语音示例(2.x)</string>
+    <string name="app_name">小呆机器人</string>
     <string name="please_speak">请说话</string>
     <string name="speaking">说话中</string>
     <string name="cancel">取消</string>
     <string name="start">开始</string>
     <string name="setting">设置</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="weather">报天气</string>
+    <string name="recognize">语音识别</string>
+    <string name="deviceList">设备列表</string>
+    <string name="toggleLed">拨动 LED 灯</string>
+    <string name="pairedDevices">已配对的设备</string>
 
 
     <string name="infile_default"></string>
